# amsmartproperties

./: .gitignore  .gitmodules  AMFunction.h  AMProperty.h  AMVariableNames.h  CMakeLists.txt  README.md
docs/: Debug.h  Mainpage.h  SmartProperties.h  SmartPropertiesTutorial.h  SmartPropertiesTutorial_cs.h  doxyfile
examples/: AMFunction_1.cpp  AMProperty_1.cpp  AMProperty_2.cpp  AMProperty_3.cpp  Makefile
src/: AMFunction.cpp  AMProperty.cpp  AMSmartPropertiesConfig.h.in  AMVariableNames.cpp
test/Function/: CMakeLists.txt  test_AMFunction.cpp  test_AMFunction2.cpp  test_AMFunction3.cpp
test/SmartProperties/: CMakeLists.txt  test_AMProperties.cpp
test/src/: AMController.h  AMCoords.cpp  AMCoords.h  AMUICommon.h  AMView.cpp  AMView.h  AMView2.h  AMWindow.cpp  AMWindow.h  controller.h
